# fractais

./: CMakeLists.txt  Fractais.cbp  Fractais.pro  Makefile  Readme.md  fractais.cpp  respostas.hpp
lib/: cpen.cpp  cpen.h  pen.cpp  pen.h  sfLine.h  sfline.cpp
